Add test stability delay